<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_principal"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/forgotPassword"
        android:textColor="@android:color/background_dark"
        android:textSize="25dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewInformacao"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewForgotPassword"
        android:layout_centerHorizontal="true"
        android:text="@string/textInformacao3"
        android:textAlignment="center"
        android:textSize="18dp" />


    <Button
        android:id="@+id/buttonEnviarEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextEmail"
        android:layout_alignLeft="@+id/editTextEmail"
        android:layout_alignRight="@+id/editTextEmail"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="28dp"
        android:background="@color/buttonPrincipal"
        android:text="@string/textEnviarEmail"
        android:textAllCaps="false"
        android:textSize="@dimen/inputText" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textViewInformacao"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColorHint="@android:color/background_dark" />

    <TextView
        android:id="@+id/textViewInformacao3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewInformacao"
        android:layout_alignStart="@+id/textViewInformacao"
        android:layout_centerVertical="true"
        android:text="@string/textInformacao4"
        android:textAlignment="center"
        android:textSize="18dp"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/editTextCodigo"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textViewInformacao3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="Código"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColorHint="@android:color/background_dark"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonEnviarCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextCodigo"
        android:layout_alignLeft="@+id/editTextCodigo"
        android:layout_alignRight="@+id/editTextCodigo"
        android:layout_alignStart="@+id/editTextCodigo"
        android:layout_below="@+id/editTextCodigo"
        android:layout_marginTop="26dp"
        android:background="@color/buttonPrincipal"
        android:text="@string/textEnviarCodigo"
        android:textAllCaps="false"
        android:textSize="@dimen/inputText"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/textViewSuaSenha"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/buttonEnviarCodigo"
        android:layout_alignLeft="@+id/buttonEnviarCodigo"
        android:layout_alignRight="@+id/buttonEnviarCodigo"
        android:layout_alignStart="@+id/buttonEnviarCodigo"
        android:layout_below="@+id/buttonEnviarCodigo"
        android:layout_marginTop="20dp"
        android:text="@string/textSuaSenha"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="25dp"
        android:textStyle="bold"
        android:visibility="invisible" />
</RelativeLayout>