<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_principal">

            <TextView
                android:id="@+id/TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:text="@string/texto_novo_anuncio"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/TextView"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="26dp"
                android:background="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_action_add" />


            <ImageView
                android:id="@+id/image2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignTop="@+id/image3"
                android:layout_toEndOf="@+id/textView5"
                android:layout_toRightOf="@+id/textView5"
                android:background="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_action_add" />

            <ImageView
                android:id="@+id/image3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignLeft="@+id/image5"
                android:layout_alignStart="@+id/image5"
                android:layout_alignTop="@+id/image1"
                android:background="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_action_add" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignLeft="@+id/image1"
                android:layout_alignStart="@+id/image1"
                android:layout_alignTop="@+id/image5"
                android:background="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_action_add" />


            <ImageView
                android:id="@+id/image5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignTop="@+id/image6"
                android:layout_centerHorizontal="true"
                android:background="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_action_add" />

            <ImageView
                android:id="@+id/image6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignLeft="@+id/image2"
                android:layout_alignStart="@+id/image2"
                android:layout_below="@+id/image2"
                android:layout_marginTop="26dp"
                android:background="@android:color/darker_gray"
                app:srcCompat="@drawable/ic_action_add" />


            <EditText
                android:id="@+id/edit_titulo"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/image4"
                android:layout_alignStart="@+id/image4"
                android:layout_below="@+id/image4"
                android:layout_marginTop="23dp"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="Título do anuncio"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edit_descricao"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_alignLeft="@+id/edit_titulo"
                android:layout_alignStart="@+id/edit_titulo"
                android:layout_below="@+id/edit_titulo"
                android:layout_marginTop="18dp"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="Descrição do produto"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <EditText
                android:id="@+id/edit_preco"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/edit_descricao"
                android:layout_alignStart="@+id/edit_descricao"
                android:layout_below="@+id/edit_descricao"
                android:layout_marginTop="22dp"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="@string/preco_produto"
                android:inputType="numberDecimal"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />


            <EditText
                android:id="@+id/edit_categorias"
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_alignLeft="@+id/edit_preco"
                android:layout_alignStart="@+id/edit_preco"
                android:layout_below="@+id/edit_preco"
                android:layout_marginTop="21dp"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="Descreva as categorias"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />


            <EditText
                android:id="@+id/edit_contato"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/edit_categorias"
                android:layout_alignStart="@+id/edit_categorias"
                android:layout_below="@+id/edit_categorias"
                android:layout_marginTop="27dp"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="@string/numero_contato"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <Button
                android:id="@+id/button_adicionar_anuncio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edit_tag2"
                android:layout_alignLeft="@+id/edit_tag2"
                android:layout_alignRight="@+id/edit_tag2"
                android:layout_alignStart="@+id/edit_tag2"

                android:layout_below="@+id/edit_tag2"
                android:layout_marginTop="26dp"
                android:background="@color/buttonPrincipal"
                android:text="Adicionar Anuncio"
                android:textAllCaps="false"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_contato"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="14dp"
                android:text="@string/novo_anuncio_tags"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edit_tag1"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/edit_contato"
                android:layout_alignStart="@+id/edit_contato"
                android:layout_below="@+id/textView5"
                android:layout_marginTop="22dp"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="Digite uma tag"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <EditText
                android:id="@+id/edit_tag2"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/edit_tag3"
                android:layout_alignStart="@+id/edit_tag3"
                android:layout_below="@+id/edit_tag3"
                android:layout_marginTop="21dp"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="Digite uma tag"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

            <EditText
                android:id="@+id/edit_tag3"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_alignLeft="@+id/edit_tag1"
                android:layout_alignStart="@+id/edit_tag1"
                android:layout_below="@+id/edit_tag1"
                android:layout_marginTop="27dp"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="Digite uma tag"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>